Fix some spacing.

--- a/resources/style.css
+++ b/resources/style.css
@@ -42,7 +42,7 @@ p {
   display:inline;
   justify-content:start;
   margin: none;
-  height:25px;
+  height:28px;
   padding:none;
   text-align:left;
 
